[gd_scene load_steps=7 format=3 uid="uid://b4l06swu3b0at"]

[ext_resource type="Script" uid="uid://btfkpv0ivkj23" path="res://Scenes/UI/GUI/end_level_menu.gd" id="1_4tisk"]
[ext_resource type="PackedScene" uid="uid://on5th0h7vdio" path="res://Scenes/UI/Helpers/big_btn.tscn" id="2_qkp7q"]
[ext_resource type="Shortcut" uid="uid://7jp8bno8cn0h" path="res://Shorcuts/enter.tres" id="3_0ixbw"]
[ext_resource type="Shortcut" uid="uid://0rm7pt7cmik" path="res://Shorcuts/restart.tres" id="4_vsyva"]
[ext_resource type="Shortcut" uid="uid://bq8ywodojp3li" path="res://Shorcuts/quit.tres" id="5_wxsk7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6g2ge"]
bg_color = Color(5.29438e-07, 0.716284, 0.39587, 1)

[node name="EndLevelMenu" type="Panel" node_paths=PackedStringArray("_total_points_label", "_time_label", "_record_time_label", "_next_level_btn")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6g2ge")
script = ExtResource("1_4tisk")
_total_points_label = NodePath("CenterContainer/VBoxContainer/Points")
_time_label = NodePath("CenterContainer/VBoxContainer/HBoxContainer/Time")
_record_time_label = NodePath("CenterContainer/VBoxContainer/HBoxContainer/BestTime")
_next_level_btn = NodePath("CenterContainer/VBoxContainer/VBoxContainer/NextLevel")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Points" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 80
text = "Points: 0 of 0"
horizontal_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Time" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 60
text = "Time: 0:00.0"
horizontal_alignment = 1
uppercase = true

[node name="BestTime" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.675, 0.3, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 40
text = "Best time: 0:00.0"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="NextLevel" parent="CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_qkp7q")]
layout_mode = 2
shortcut = ExtResource("3_0ixbw")
text = "Next level"

[node name="TryAgain" parent="CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_qkp7q")]
layout_mode = 2
shortcut = ExtResource("4_vsyva")
text = "Try again"

[node name="BackToMenu" parent="CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_qkp7q")]
layout_mode = 2
shortcut = ExtResource("5_wxsk7")
text = "Back to menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/BackToMenu" to="." method="_on_back_to_menu_pressed"]
